--- a/pom.xml
+++ b/pom.xml
@@ -44,4 +44,12 @@
             </plugin>
         </plugins>
     </build>
+ <dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.6.2</version>
+        <scope>test</scope>
+    </dependency>
+ </dependencies>
 </project>
