--- a/pom.xml
+++ b/pom.xml
@@ -36,20 +36,23 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
-            </plugin>
-        </plugins>
+            </plugin>        </plugins>
     </build>
  <dependencies>
     <dependency>
         <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
+        <artifactId>junit-jupiter-engine</artifactId>
         <version>5.6.2</version>
         <scope>test</scope>
     </dependency>
- </dependencies>
+     <dependency>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-surefire-plugin</artifactId>
+         <version>2.22.2</version>
+     </dependency> </dependencies>
 </project>
