--- a/pom.xml
+++ b/pom.xml
@@ -45,16 +45,27 @@
         </plugins>
     </build>
  <dependencies>
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.6.2</version>
-        <scope>test</scope>
-    </dependency>
-<!--     <dependency>-->
-<!--         <groupId>org.apache.maven.plugins</groupId>-->
-<!--         <artifactId>maven-surefire-plugin</artifactId>-->
-<!--         <version>2.22.2</version>-->
-<!--     </dependency> -->
-</dependencies>
+     <dependency>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter-engine</artifactId>
+         <version>5.7.1</version>
+         <scope>test</scope>
+     </dependency>
+     <dependency>
+         <groupId>org.mariadb.jdbc</groupId>
+         <artifactId>mariadb-java-client</artifactId>
+         <version>2.7.2</version>
+     </dependency>
+     <dependency>
+         <groupId>org.flywaydb</groupId>
+         <artifactId>flyway-core</artifactId>
+         <version>7.5.3</version>
+     </dependency>
+
+     <!--     <dependency>-->
+     <!--         <groupId>org.apache.maven.plugins</groupId>-->
+     <!--         <artifactId>maven-surefire-plugin</artifactId>-->
+     <!--         <version>2.22.2</version>-->
+     <!--     </dependency> -->
+ </dependencies>
 </project>
